// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalConfirmationDelete /> <TestModalConfirmationDelete /> should render correctly 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-g"
    aria-describedby="id-g"
    aria-expanded={false}
    aria-haspopup="dialog"
    aria-label="admin.global.delete"
    className="sc-bcXGCL bsxzJl cap-buttonQuickAction"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-bcXGCL sc-eJDTud cRRiuB hEjMCZ cap-icon cap-buttonQuickAction-icon"
      fill="none"
      height="1em"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.091 3.75H1.909a.3.3 0 0 0-.193.073.24.24 0 0 0-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 0 0 .32-.707V4a.24.24 0 0 0-.08-.177.3.3 0 0 0-.193-.073m-5.045 6.5a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11.212.04.289.11a.36.36 0 0 1 .12.265zm2.727 0a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11s.212.04.289.11a.36.36 0 0 1 .12.265zM11.455 2H8.863a.14.14 0 0 1-.097-.037.12.12 0 0 1-.04-.088V1.25a1.2 1.2 0 0 0-.4-.884A1.43 1.43 0 0 0 7.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 0 0-.4.884v.625a.12.12 0 0 1-.04.088.14.14 0 0 1-.096.037H.546a.57.57 0 0 0-.386.146A.48.48 0 0 0 0 2.5c0 .133.057.26.16.354A.57.57 0 0 0 .545 3h10.91a.57.57 0 0 0 .385-.146A.48.48 0 0 0 12 2.5a.48.48 0 0 0-.16-.354.57.57 0 0 0-.386-.146m-7.091-.125V1.25a.24.24 0 0 1 .08-.177A.3.3 0 0 1 4.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 0 1 .08.177v.625a.12.12 0 0 1-.04.088A.14.14 0 0 1 7.5 2h-3a.14.14 0 0 1-.096-.037.12.12 0 0 1-.04-.088"
        fill="currentColor"
      />
    </svg>
  </button>,
  <div
    className="cap-tooltip-container"
    hidden={true}
    id="id-g"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1800,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ModalConfirmationDelete /> <TestModalConfirmationDelete /> should render modal open 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-g"
    aria-describedby="id-g"
    aria-expanded={true}
    aria-haspopup="dialog"
    aria-label="admin.global.delete"
    className="sc-bcXGCL bsxzJl cap-buttonQuickAction"
    onBlur={[Function]}
    onClick={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-bcXGCL sc-eJDTud cRRiuB hEjMCZ cap-icon cap-buttonQuickAction-icon"
      fill="none"
      height="1em"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.091 3.75H1.909a.3.3 0 0 0-.193.073.24.24 0 0 0-.08.177v7c0 .265.115.52.32.707.205.188.482.293.771.293h6.546c.29 0 .567-.105.771-.293a.96.96 0 0 0 .32-.707V4a.24.24 0 0 0-.08-.177.3.3 0 0 0-.193-.073m-5.045 6.5a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.043-.195.12-.265s.181-.11.29-.11.212.04.289.11a.36.36 0 0 1 .12.265zm2.727 0a.36.36 0 0 1-.12.265.43.43 0 0 1-.29.11.43.43 0 0 1-.289-.11.36.36 0 0 1-.12-.265v-4.5c0-.1.044-.195.12-.265.077-.07.181-.11.29-.11s.212.04.289.11a.36.36 0 0 1 .12.265zM11.455 2H8.863a.14.14 0 0 1-.097-.037.12.12 0 0 1-.04-.088V1.25a1.2 1.2 0 0 0-.4-.884A1.43 1.43 0 0 0 7.365 0H4.636c-.361 0-.708.132-.964.366a1.2 1.2 0 0 0-.4.884v.625a.12.12 0 0 1-.04.088.14.14 0 0 1-.096.037H.546a.57.57 0 0 0-.386.146A.48.48 0 0 0 0 2.5c0 .133.057.26.16.354A.57.57 0 0 0 .545 3h10.91a.57.57 0 0 0 .385-.146A.48.48 0 0 0 12 2.5a.48.48 0 0 0-.16-.354.57.57 0 0 0-.386-.146m-7.091-.125V1.25a.24.24 0 0 1 .08-.177A.3.3 0 0 1 4.636 1h2.728c.072 0 .141.026.192.073a.24.24 0 0 1 .08.177v.625a.12.12 0 0 1-.04.088A.14.14 0 0 1 7.5 2h-3a.14.14 0 0 1-.096-.037.12.12 0 0 1-.04-.088"
        fill="currentColor"
      />
    </svg>
  </button>,
  <div
    className="cap-tooltip-container"
    hidden={true}
    id="id-g"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
        "zIndex": 1800,
      }
    }
  />,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bcXGCL kmvLIA sc-fcCDYY cap-modal__overlay"
      onClick={[Function]}
      style={
        {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bcXGCL BwvOS sc-GKYOR dCANLh cap-modal"
        style={
          {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
          }
        }
      >
        <header
          className="sc-bcXGCL gUHbRp cap-modal__header"
        >
          <div
            className="sc-bcXGCL iRyhmE"
          >
            <h2
              className="sc-bcXGCL czxWiY cap-heading"
              id="modal-title"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              delete-confirmation
            </h2>
          </div>
          <button
            aria-describedby="modal-title"
            className="sc-bcXGCL gBxHlP"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="false"
              className="sc-bcXGCL sc-eJDTud gmFCZp knzWyK cap-icon"
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11 11 1M1 1l10 10"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={0.8}
              />
            </svg>
          </button>
        </header>
        <main
          className="sc-bcXGCL laGNWx cap-modal__body"
        >
          <p
            className="sc-bcXGCL jMALnA cap-text"
          >
            are-you-sure-to-delete-something {"element":"Post FR 12"}
          </p>
        </main>
        <footer
          className="sc-bcXGCL eMjpTW cap-modal__footer"
        >
          <div
            className="sc-bcXGCL egcRuI cap-buttonGroup"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <button
              className="sc-bcXGCL sc-laZSpB jXBoaN dsOIMI cap-button"
              onClick={[Function]}
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
              type="button"
            >
              cancel
            </button>
            <button
              className="sc-bcXGCL sc-laZSpB jXBoaN dOPPpN cap-button"
              onClick={[Function]}
              type="button"
            >
              global.delete
            </button>
          </div>
        </footer>
      </div>
    </div>
  </div>,
]
`;
